PyMaker/datas/object2/RawHTML/i14801/Python_DOC_referPages.syntaxerror-in-any-test.txt
<div class="post-text" itemprop="text">
<p>I am pretty new to python syntax ... how do I use the <code>or</code> operator in this scenario?</p>
<p>To check if files end with either '.txt' or '.sm3dump', I tried to use <code>any()</code>, but I got a SyntaxError:</p>
<pre><code>if any(filename.endswith('.txt'), filename.endswith('.sm3dump'))
                                                               ^
SyntaxError: invalid syntax
</code></pre>
<p>What did I do wrong?</p>
</div>
<div class="post-text" itemprop="text">
<p>You've called <a href="https://docs.python.org/3/library/functions.html#any" rel="nofollow"><code>any()</code></a> with two arguments:</p>
<pre><code>any(filename.endswith('.txt'), filename.endswith('.sm3dump'))
#   &lt;----- argument #1 -----&gt;  &lt;------- argument #2 -------&gt;
</code></pre>
<p>... but it only takes one, which must be an iterable (a list, tuple, etc.):</p>
<pre><code>any([filename.endswith('.txt'), filename.endswith('.sm3dump')])
#   &lt;-------------- one list with two elements --------------&gt;
</code></pre>
<p>If you wanted to use <code>or</code> instead, it's straightforward:</p>
<pre><code>filename.endswith('.txt') or filename.endswith('.sm3dump')
</code></pre>
<p>A common idiom when using <code>any()</code> to perform multiple similar tests is to use a <a href="https://docs.python.org/3/tutorial/datastructures.html#list-comprehensions" rel="nofollow">list comprehension</a> or <a href="https://docs.python.org/3/glossary.html#term-generator-expression" rel="nofollow">generator expression</a>:</p>
<pre><code>any([filename.endswith(ext) for ext in ('.txt', '.sm3dump')])
#   &lt;----------------- list comprehension -----------------&gt;
</code></pre>
<pre><code>any(filename.endswith(ext) for ext in ('.txt', '.sm3dump'))
#   &lt;-------- generator expression (no brackets) --------&gt;
</code></pre>
<p>Although in this case, you can actually supply a tuple of strings to <a href="https://docs.python.org/3/library/stdtypes.html#str.endswith" rel="nofollow"><code>str.endswith()</code></a>, and it'll check them all:</p>
<pre><code>filename.endswith(('.txt', '.sm3dump'))
</code></pre>
<p>Whichever test you use, you need to remember to end your <code>if</code> statement with a colon:</p>
<pre><code>if filename.endswith(('.txt', '.sm3dump')):
    # do something ...
</code></pre>
</div>
<span class="comment-copy">For or operator simply type <code>or</code>. And put a <code>:</code> at the end of your <code>if</code>. <code>if filename.endswith('.txt') or filename.endswith('.sm3dump'):</code> you can find this quickly using google though...</span>
<span class="comment-copy">Eric: To discover things like the last part of Zero's answer, use <code>help</code> at an interactive prompt to quickly check the signature and use of functions and classes.  In particular, <code>&gt;&gt;&gt; help(str.endswith)</code> ends with " suffix can also be a tuple of strings to try".</span>
